# huedra

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: result.json  test.json
assets/mesh/: untitled.glb  untitled.gltf  untitled.mtl
assets/shaders/: compile.py  deffered.slang  font.slang  frag.slang  shader.comp  shader.frag  shader.metal  shader.slang  shader.vert  triangle.slang  vert.slang
cmake/: dependencies.cmake
core/: types.hpp
huedra/: main.cpp
huedra/core/: global.cpp  global.hpp  log.cpp  log.hpp  timer.cpp  timer.hpp  types.hpp
huedra/core/file/: types.hpp  utils.hpp
huedra/core/input/: input.cpp  input.hpp  keys.hpp  mouse.hpp
huedra/core/memory/: huffman_tree.cpp  huffman_tree.hpp  utils.hpp
huedra/core/references/: ref.hpp  reference_counter.cpp  reference_counter.hpp
huedra/core/serialization/: base64.cpp  base64.hpp  json.cpp  json.hpp
huedra/core/string/: utils.hpp
huedra/graphics/: buffer.cpp  buffer.hpp  context.hpp  graphics_manager.cpp  graphics_manager.hpp  pipeline.cpp  pipeline.hpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_data.hpp  render_context.hpp  render_graph_builder.cpp  render_graph_builder.hpp  render_pass.cpp  render_pass.hpp  render_pass_builder.cpp  render_pass_builder.hpp  render_target.cpp  render_target.hpp  resource_set.cpp  resource_set.hpp  shader_module.cpp  shader_module.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  utils.hpp
huedra/math/: conversions.hpp  matrix.hpp  matrix_core.hpp  matrix_projection.hpp  matrix_transform.hpp  quaternion.hpp  quaternion_transform.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vec_transform.hpp
huedra/platform/cocoa/: window.cpp  window.hpp  window.mm
huedra/platform/metal/: buffer.hpp  buffer.mm  config.hpp  context.cpp  context.hpp  context.mm  parameterHandler.mm  parameter_handler.hpp  parameter_handler.mm  pipeline.hpp  pipeline.mm  render_context.hpp  render_context.mm  render_target.hpp  render_target.mm  swapchain.hpp  swapchain.mm  texture.hpp  texture.mm  type_converter.hpp  type_converter.mm
huedra/platform/slang/: config.hpp  context.cpp  context.hpp
huedra/platform/vulkan/: buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  config.hpp  context.cpp  context.hpp  descriptor_handler.cpp  descriptor_handler.hpp  device.cpp  device.hpp  instance.cpp  instance.hpp  os_manager.cpp  os_manager.hpp  pipeline.cpp  pipeline.hpp  render_context.cpp  render_context.hpp  render_pass.cpp  render_pass.hpp  render_target.cpp  render_target.hpp  resource_set.cpp  resource_set.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  type_converter.cpp  type_converter.hpp
huedra/platform/win32/: window.cpp  window.hpp
huedra/resources/: mesh_data.hpp  mesh_loader.cpp  mesh_loader.hpp  resource_manager.cpp  resource_manager.hpp
huedra/resources/font/: data.hpp  loader.cpp  loader.hpp
huedra/resources/mesh/: loader.cpp  loader.hpp
huedra/resources/texture/: data.hpp  loader.cpp  loader.hpp
huedra/scene/: scene_manager.cpp  scene_manager.hpp  types.hpp
huedra/scene/components/: transform.hpp
huedra/window/: window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
scripts/: tidy.py
shaders/: clean.py  compile.py  shader.frag  shader.vert  shader1.frag  shader1.vert
